fix spacing

--- a/src/base/_reset.scss
+++ b/src/base/_reset.scss
@@ -42,6 +42,7 @@ body {
 	text-rendering	: geometricPrecision;
 	line-height		: 1;
 	background-color: var(--color-background, #fff);
+	overflow-x		: hidden;
 }
 
 // A elements that don't have a class get default styles --------------
