--- a/src/components/tab/TabComponent/TabComponent.scss
+++ b/src/components/tab/TabComponent/TabComponent.scss
@@ -1,5 +1,5 @@
 .tab, tab-component {
 	position: relative;
 	transition: var(--transition);
-	overflow: hidden;
+	overflow: visible;
 }
